Added: instruction class, cpu::execute() Instructions implemented: ADD_IMM

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,4 +3,4 @@ project(nes)
 
 set(CMAKE_CXX_STANDARD 14)
 
-add_executable(nes src/main.cpp src/cpu.cpp src/cpu.h)
+add_executable(nes src/main.cpp src/cpu.cpp src/cpu.h src/mmu.cpp src/mmu.h src/instruction.h src/instructions.cpp src/instructions.h)
