--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,16 @@
 cmake_minimum_required(VERSION 3.23)
-project(nes)
+project(nesrex)
 
 set(CMAKE_CXX_STANDARD 14)
 
-add_executable(nes src/main.cpp src/cpu.cpp src/cpu.h src/mmu.cpp src/mmu.h src/instruction.h src/instructions.cpp src/instructions.h)
+add_executable(
+        nesrex
+        src/main.cpp
+        src/cpu.cpp
+        src/cpu.h
+        src/mmu.cpp
+        src/mmu.h
+        src/instruction.h
+        src/instructions.cpp
+        src/instructions.h
+)
