Added: validate iNES header

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -13,4 +13,6 @@ add_executable(
         src/instruction.h
         src/instructions.cpp
         src/instructions.h
-        src/ines.cpp src/ines.h)
+        src/ines.cpp
+        src/ines.h
+        )
